# wkavu

./: .deepsource.toml  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  LICENSE  README.md  log4rs.yml
.github/workflows/: audit.yml  docker-verify.yml  docker.yml  rust.yml
define/: bt-tt.yml  domp4.yml
migrations/: 20211210100012_inital.sql
src/: global.rs  http.rs  main.rs  model.rs  resolver.rs  torznab.rs
webapp/: index.html
