[package]
name = "wkavu"
version = "0.1.0"
edition = "2021"

[dependencies]
rbson = "2"
log = "0.4"
rbatis = { version = "3.0", features =["runtime-async-std-rustls","sqlite"], default-features = false}
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.14", features = ["full"] }
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
sqlx = { version = "0.5", features = ["migrate", "runtime-async-std-rustls", "sqlite"] }
anyhow = "1"
thiserror = "1"
clap = "2"
lazy_static = "1.4.0"
human-panic = "1.0.3"
actix-web = "3"
serde_json = "1.0"
actix-files = "0.5.0"
actix-cors = "0.5.0"
select = "0.5.0"
headless_chrome = "0.9.0"
scraper = "0.12.0"
tinytemplate = "1.2.1"
log4rs = "1.0.0"
xml-rs = "0.8.4"
chrono = "0.4.19"
cron = "0.9.0"
magnet-url = "2.0.0"
urlencoding = "2.1.0"
cronjob = "0.3.17"
async-trait = "0.1.52"
regex = "1.5.4"
env_logger = "0.9.0"
serde_yaml = "0.8.23"
rust-embed="6.3.0"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }


[dev-dependencies]
actix-rt = "2.5.0"
